# zram-advisor

./: .gitignore  README.md  fix-zram  fix-zram.sh  pmemstat_main.py  pyproject.toml  random-sites.txt  zram-advisor  zram-fix
zram_advisor/: __init__.py  fix-zram.sh  main.py  zram_advisor.py
