# HOW TO PUBLISH...
#
# Prep Work (ensure need modules are up-to-date):
#   sudo pacman -Syu python-pip
#   sudo pacman -Syu python-build
#   sudo pacman -Syu python-twine
#   -- antiquated way
#      python3 -m pip install --upgrade pip
#      python3 -m pip install --upgrade build
#      python3 -m pip install --upgrade twine
# 
# PUBLIC Build and deploy (from project directory):
#   ## BUMP the version (below in [project])
#   rm -r dist; python3 -m build; ls dist/.
#   python3 -m twine upload dist/*
#     ## Enter __token__ and the saved TOKEN (in bitwarden)
#   pipx upgrade zram-advisor || pipx install zram-advisor # >= python3.11
#   --OR-- sudo python3 -m pip install zram-advisor # <= python3.10
#   ## VISIT  https://pypi.org/project/zram-advisor and delete old versions
#
# TEST Build and test (from project directory):
#   ## BUMP the version (below in [project])
#   rm -r dist; python3 -m build
#   python3 -m twine upload --repository testpypi dist/*
#     ## Enter __token__ and the saved TOKEN (in bitwarden)
#   pip install --upgrade --index-url https://test.pypi.org/simple/ --no-deps --user --break-system-packages zram-advisor
#   pip uninstall --break-system-packages zram-advisor
#   ## VISIT  https://test.pypi.org/project/zram-advisor and delete old versions

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "1.0.0"
name = "zram-advisor"
authors = [
    {name = "Joe Defen", email = "joedef@gmail.com"},
]
description = "zRAM status and setup tools"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["zram", "zram service"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

[project.scripts]
zram-advisor = "zram_advisor.zram_advisor:run"

[tool.hatch.build.targets.wheel]
packages = ["zram_advisor"]

[tool.hatch.build.targets.sdist]
exclude = [
    "__pycache__",
    "zram_advisor/__pycache__",
]

[project.urls]
"Homepage" = "https://github.com/joedefen/zram-advisor"
"Bug Tracker" = "https://github.com/joedefen/zram-advisor/issues"
