[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "zram-advisor"
version = "1.1.2"
description = "zRAM status and setup tools"
authors = [
    {name = "Joe Defen", email = "joedef@duck.com"},
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["zram", "zram service"]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
"Homepage" = "https://github.com/joedefen/zram-advisor"
"Bug Tracker" = "https://github.com/joedefen/zram-advisor/issues"

[project.scripts]
zram-advisor = "zram_advisor.main:run"

[tool.flit.sdist]
include = ["zram_advisor/*.sh"]
